--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
-    "compression": "^1.0.3",
+    "compression": "^1.7.3",
     "cors": "^2.5.2",
-    "helmet": "^3.10.0",
-    "loopback": "^3.0.0",
+    "helmet": "^3.13.0",
+    "loopback": "^3.22.3",
     "loopback-boot": "^2.6.5",
-    "loopback-component-explorer": "^5.0.0",
-    "loopback-connector-postgresql": "^3.3.1",
+    "loopback-component-explorer": "^5.4.0",
+    "loopback-connector-postgresql": "^3.4.0",
+    "nodemailer": "^4.6.8",
+    "pg": "^7.4.3",
     "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^2.0.0"
+    "strong-error-handler": "^2.0.0",
+    "twilio": "^3.22.0"
   },
   "devDependencies": {
     "eslint": "^3.17.1",
